--- a/phpdoc/Makefile
+++ b/phpdoc/Makefile
@@ -2,7 +2,7 @@ build:
 	php doc-base/configure.php --with-lang=ja --enable-xml-details
 
 setup:
-	sudo apt install build-essential git subversion libxml2-dev libkrb5-dev libsqlite3-dev libbz2-dev libcurl-dev libcurl4-openssl-dev libjpeg-dev libonig-dev libreadline-dev libtidy-dev libxslt-dev libzip-dev
+	sudo apt install build-essential git subversion libxml2-dev libkrb5-dev libsqlite3-dev libbz2-dev libcurl4-openssl-dev libcurl4-openssl-dev libjpeg-dev libonig-dev libreadline-dev libtidy-dev libxslt-dev libzip-dev
 	git clone git://github.com/phpenv/phpenv.git ~/.phpenv
 	git clone https://github.com/php-build/php-build ~/.phpenv/plugins/php-build
 	echo "--with-pear" >> ~/.phpenv/plugins/php-build/share/php-build/default_configure_options
