--- a/phpdoc/Makefile
+++ b/phpdoc/Makefile
@@ -12,7 +12,7 @@ up:
 	svn up
 	make -j1 build
 	make -j1 chk
-	/usr/bin/google-chrome-stable --force-device-scale-factor=1.3 revcheck.html &
+	/usr/bin/google-chrome-stable --force-device-scale-factor=1.3 revcheck.html 2>/dev/null &
 
 chk:
 	php doc-base/scripts/revcheck.php ja > revcheck.html
