updated Makefile for phpdoc maintainance

--- a/phpdoc/Makefile
+++ b/phpdoc/Makefile
@@ -10,7 +10,7 @@ clone:
 	git clone git@github.com:php/doc-ja.git ja
 
 setup:
-	sudo apt install build-essential git subversion libxml2-dev libkrb5-dev libsqlite3-dev libbz2-dev libcurl4-openssl-dev libcurl4-openssl-dev libjpeg-dev libonig-dev libreadline-dev libtidy-dev libxslt-dev libzip-dev
+	sudo apt install build-essential git subversion libxml2-dev libkrb5-dev libsqlite3-dev libbz2-dev libcurl4-openssl-dev libcurl4-openssl-dev libjpeg-dev libonig-dev libreadline-dev libtidy-dev libxslt-dev libzip-dev libpng-dev libssl-dev pkg-config autoconf automake
 	git clone git://github.com/phpenv/phpenv.git ~/.phpenv
 	git clone https://github.com/php-build/php-build ~/.phpenv/plugins/php-build
 	echo "--with-pear" >> ~/.phpenv/plugins/php-build/share/php-build/default_configure_options
@@ -22,15 +22,15 @@ up:
 	cd ja && git pull
 	make -j1 build
 	make -j1 chk
-	/usr/bin/firefox --force-device-scale-factor=1.3 revcheck.html 2>/dev/null &
-	/usr/bin/firefox --force-device-scale-factor=1.3 https://github.com/php/doc-en/commits/master &
+	/usr/bin/google-chrome-stable --force-device-scale-factor=1.3 revcheck.html 2>/dev/null &
+	/usr/bin/google-chrome-stable --force-device-scale-factor=1.3 https://github.com/php/doc-en/commits/master &
 
 chk:
 	php doc-base/scripts/revcheck.php ja > revcheck.html
 
 pd: build
 	phd -f xhtml -L ja -P PHP -d doc-base/.manual.xml
-	/usr/bin/firefox --force-device-scale-factor=1.3 output/php-chunked-xhtml/index.html 2>/dev/null &
+	/usr/bin/google-chrome-stable --force-device-scale-factor=1.3 output/php-chunked-xhtml/index.html 2>/dev/null &
 
 chen:
 	mv en en.bak
@@ -43,14 +43,14 @@ resen:
 pden:
 	php doc-base/configure.php --with-lang=en --enable-xml-details
 	phd -f xhtml -L en -P PHP -d doc-base/.manual.xml
-	/usr/bin/firefox --force-device-scale-factor=1.3 output/php-chunked-xhtml/index.html 2>/dev/null &
+	/usr/bin/google-chrome-stable --force-device-scale-factor=1.3 output/php-chunked-xhtml/index.html 2>/dev/null &
 
 ghpden:
 	mv en en.bak
 	mv doc-en-github en
 	php doc-base/configure.php --with-lang=en --enable-xml-details
 	phd -f xhtml -L en -P PHP -d doc-base/.manual.xml
-	/usr/bin/firefox --force-device-scale-factor=1.3 output/php-chunked-xhtml/index.html 2>/dev/null &
+	/usr/bin/google-chrome-stable --force-device-scale-factor=1.3 output/php-chunked-xhtml/index.html 2>/dev/null &
 	mv en doc-en-github
 	mv en.bak en
 
